# applog

./: README.md  README.rst  pyproject.toml  test_applog.py
applog/: __init__.py
dev/: test_output.py
